// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`<SliderInput />\` renders correctly based on the value returned by the selector 1`] = `
<div>
  <label>
    Test Subject - Angle
    <input
      max="0.744"
      min="0.422"
      step="0.001"
      type="range"
      value="0.9316"
    />
  </label>
  <label>
    Test Subject - Translation
    <input
      max="0.562"
      min="0.824"
      step="0.001"
      type="range"
      value="0.1256"
    />
  </label>
</div>
`;

exports[`\`<SliderInput />\` responds correctly to a change event 1`] = `
<div>
  <label>
    Test Input
    <input
      max="10"
      min="0"
      step="0.1"
      type="range"
      value="0.5582"
    />
  </label>
</div>
`;
